--- a/css/colors/orange.css
+++ b/css/colors/orange.css
@@ -1,4 +1,4 @@
-/* default color: #ffa854  */ /* #ff0000*/
+/* default color: #ffa854  */ /* #bf2164*/
 .bg-color,
 section.bg-color,
 section.call-to-action,
@@ -172,7 +172,6 @@ h2.hs1 span,
 .preloader1{
 	border-top-color:#bf2164 ;
 }
-
 
 
 
