--- a/css/style.css
+++ b/css/style.css
@@ -7436,7 +7436,7 @@ a, img {
 		margin-bottom: 30px;
 	}
 	.de_tab.tab_style_4 .de_nav li {
-		min-width:100px;
+		/*min-width:100px;*/
 		padding: 15px 0px 15px 0px;
 	}
 	.de_tab.tab_style_4 .de_nav {
@@ -7460,6 +7460,9 @@ a, img {
 	.picframe img {
 		width: 60%;
 	}
+	.subtitle2 {
+    font-size: 18px;
+}
 	
 	#custom-owl-slider {
 	width: 120%;
@@ -7476,15 +7479,18 @@ a, img {
 	}
 	
 	.schedule-item .sc-time,
-	.schedule-item .sc-pic,
-	.schedule-item .sc-name,
-	.schedule-item .sc-info {
+	.schedule-item .sc-pic{
+		text-align:center;
+		width:15%;
+	}
+	.schedule-item .sc-name {
 		text-align:left;
 		width:30%;
 	}
 	
 	.schedule-item .sc-info{
 		/*margin-top:20px;*/
+		text-align:left;
 		width:50%;
 	}
 	
@@ -7554,7 +7560,7 @@ a, img {
 	}
 	a.btn-custom, .btn-custom, a.btn-slider, .btn-slider {
    	font-family: "Montserrat";
-    	font-size: 5vw;
+    	font-size: 6vw;
     	/* min-width: 120px; */
 	}
 	.container-4 .de-team-list {
@@ -7623,12 +7629,12 @@ a, img {
 		line-height:10vw;
 	}
 	h2.big,h2.very-big{
-		font-size:5vw;
-		line-height:5vw;
+		font-size:6vw;
+		line-height:6vw;
 	}
 	.subtitle.s2 h3{
-		font-size:3vw;
-		line-height:3vw;
+		font-size:4vw;
+		line-height:4vw;
 	}
 	.subtitle.s2 span{
 		display:block;
