--- a/css/style.css
+++ b/css/style.css
@@ -1889,6 +1889,12 @@ a.btn-fullwidth:hover{
 	display: block;
 	clear: both;
 }
+.spacer-for2sp {
+	width: 100%;
+	height: 10px;
+	display: block;
+	clear: both;
+}
 hr {
 	display: block;
 	clear: both;
@@ -5147,7 +5153,7 @@ footer .widget_list li a {
 	text-align:center;
 }
 .schedule-item .sc-pic img {
-	margin-top:-5px;
+	margin-top: 0px;
 	width: 80px;
 	height: auto;
 	border:solid 3px #fff;
@@ -5173,6 +5179,7 @@ footer .widget_list li a {
 	font-size: 14px;
 	margin-bottom: 10px;
 	line-height: 1.4em;
+	margin-top: -5px;
 	/*font-weight:bold;*/
 }
 .schedule-item .sc-name span {
