--- a/css/style.css
+++ b/css/style.css
@@ -5019,8 +5019,10 @@ footer .widget_list li a {
 	float:left;
 }
 .schedule-item .sc-time {
-	text-align:center;
-	width: 150px;
+	float: right !important;
+	text-align:right;
+	margin-right: 5px;
+	width: 180px;
 }
 .schedule-item .sc-sp {
 	width: 15px;
@@ -5050,13 +5052,14 @@ footer .widget_list li a {
 .schedule-item .sc-name {
 	font-weight: normal;
 	font-size: 14px;
-	width: 20%;
+	width: 15%;
 }
 .schedule-item .sc-name h4 {
 	font-size: 14px;
 	margin-bottom: 10px;
 	line-height: 1.4em;
 	margin-top: -5px;
+	margin-left: 20px;
 	/*font-weight:bold;*/
 }
 .schedule-item .sc-name span {
