--- a/css/bg.css
+++ b/css/bg.css
@@ -8,7 +8,7 @@ background-size: 100%;
 
 /* background settings for section */
 #section-intro {background:url(../images/background/1.jpg) fixed;}
-#section-fun-facts {background:url(../images/background/2.jpg) fixed;}
+#section-fun-facts {background:url(../images/background/bg.jpg) fixed;}
 #section-schedules {background:url(../images/background/bg.jpg) fixed;}
 #section-register {background:url(../images/background/bg.jpg) fixed; }
 
