--- a/css/bg.css
+++ b/css/bg.css
@@ -11,6 +11,8 @@ background-size: 100%;
 #section-fun-facts {background:url(../images/background/bg.jpg) fixed;}
 #section-schedules {background:url(../images/background/bg.jpg) fixed;}
 #section-register {background:url(../images/background/bg.jpg) fixed; }
+#section-open {background:url(../images/background/bg.jpg) fixed; }
+
 
 /* background settings for footer */
 footer{
