--- a/css/style.css
+++ b/css/style.css
@@ -1412,10 +1412,10 @@ a:hover {
 	color: #fff;
 }
 .de_light a {
-	color: #bf2164;
+	color: #ffffff;
 }
 .de_light a:hover {
-	color: #fc4668;
+	color: #bf2164;
 }
 .btn-line, a.btn-line {
 	border: solid 1px #222;
